--- a/client/src/containers/Init.module.css
+++ b/client/src/containers/Init.module.css
@@ -110,4 +110,7 @@
     margin-top: unset;
     top: 50%
   }
+  .linkStyle{
+    bottom: 27%;
+  }
 }
