--- a/client/src/containers/Main.module.css
+++ b/client/src/containers/Main.module.css
@@ -6,6 +6,7 @@
     z-index: -1;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .img_r{
